GCA4 import Various re-factoring Logging update in progress